--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,10 @@
 [alias]
-	hist = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
+	hist = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)'
 
 [user]
 	name = Robert Herbst
 	email = rob@robertfall.com
+[core]
+	sshCommand = ssh.exe
+[init]
+	defaultBranch = main
