Add Windows cliboard support

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,10 @@ set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",*:Tc"
 set-window-option -g mode-keys vi
 
+# OSC 52 clipboard passthrough
+set -g set-clipboard on
+set -g allow-passthrough on
+
 # Status bar position
 set-option -g status-position top
 
